--- a/webpack-splitting-example/package.json
+++ b/webpack-splitting-example/package.json
@@ -1,9 +1,14 @@
 {
+  "scripts": {
+    "serve": "serve dist",
+    "eslint_versions": "npm info eslint-config-airbnb@latest peerDependencies"
+  },
   "dependencies": {
     "vue": "^2.5.16",
     "webpack": "^4.12.0"
   },
   "devDependencies": {
+    "serve": "^10.0.2",
     "webpack-cli": "^3.0.3"
   }
 }
